fixed nav and added main section

--- a/index.html
+++ b/index.html
@@ -11,19 +11,24 @@
 </head>
 
 <body>
-  <header>
-    <h1>Song Suggestor</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="#">Contact</a>
-    </nav>
-  </header>
+  <div id="main-bg">
+    <header>
+      <h2>Song Suggestor</h2>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="#">Contact</a>
+      </nav>
+    </header>
 
-  <main>
+    <main>
+      <h1>Think less, listen more</h1>
+      <p>Spotify song suggestor helps you find the music you'll love</p>
+    </main>
+  </div>
+  <section>
 
-  </main>
-
+  </section>
   <footer>
 
   </footer>
