adjusted bg image

--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
     <main>
       <h1>Think less, listen more</h1>
       <p>Spotify song suggestor helps you find the music you'll love</p>
+      <div class="buttons">
+        <a href="#">Sign Up</a>
+        <a href="#">Login</a>
+      </div>
     </main>
   </div>
-  <section>
-
-  </section>
   <footer>
 
   </footer>
