about page started

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </nav>
     </header>
 
-    <main>
+    <main id="home-main">
       <h1>Think less, listen more</h1>
       <p>Spotify song suggestor helps you find the music you'll love</p>
       <div class="buttons">
