--- a/about.html
+++ b/about.html
@@ -26,27 +26,42 @@
     </section>
 
     <main id="about-main">
-      <section>
+      <section class="product-info">
         <h2>Find More 🎶</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam dolor non quo earum, a molestiae quaerat
           facilis
           voluptate eveniet labore quisquam cumque similique optio eius quos maxime enim pariatur natus.</p>
       </section>
 
-      <section>
+      <section class="product-info">
         <h2>Scroll Less 📜</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam dolor non quo earum, a molestiae quaerat
           facilis
           voluptate eveniet labore quisquam cumque similique optio eius quos maxime enim pariatur natus.</p>
       </section>
 
-      <section>
-        <h2>Love Your Playlists 💖</h2>
+      <section class="product-info">
+        <h2>Your Playlists 💖</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam dolor non quo earum, a molestiae quaerat
+          facilis
+          voluptate eveniet labore quisquam cumque similique optio eius quos maxime enim pariatur natus.</p>
+      </section>
+
+      <section class="product-info">
+        <h2>Our Robots 🤖</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam dolor non quo earum, a molestiae quaerat
           facilis
           voluptate eveniet labore quisquam cumque similique optio eius quos maxime enim pariatur natus.</p>
       </section>
     </main>
+
+    <footer>
+      <nav>
+        <a href="./index.html">Home</a>
+        <a href="./about.html">About</a>
+        <a href="#">Contact</a>
+      </nav>
+    </footer>
   </div>
 
 </body>
