--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
       <h2>Song Suggestor</h2>
       <nav>
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="#">Contact</a>
+        <a href="#">About</a>
+        <a href="contact.html">Contact</a>
       </nav>
     </header>
 
@@ -57,9 +57,9 @@
 
     <footer>
       <nav>
-        <a href="./index.html">Home</a>
-        <a href="./about.html">About</a>
-        <a href="#">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="#">About</a>
+        <a href="contact.html">Contact</a>
       </nav>
     </footer>
   </div>
