--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <header>
       <h2>Song Suggestor</h2>
       <nav>
-        <a href="index.html">Home</a>
+        <a href="#">Home</a>
         <a href="about.html">About</a>
-        <a href="#">Contact</a>
+        <a href="contact.html">Contact</a>
       </nav>
     </header>
 
