--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -24,40 +25,51 @@
     <main id="contact-main">
 
       <h1>Meet the Team!</h1>
+
+
       <section class="team-info">
-        <img src="http://via.placeholder.com/200" alt="Matthew Mulford">
-        <h2>Matthew Mulford</h2>
-        <p>Some bio info here</p>
+        <img src="/img/james.jpeg" alt="James Barciz">
+        <h2>James Barciz</h2>
+        <p>Project Lead</p>
+        <a href="https://github.com/JamesBarciz"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+      </section>
+
+      <section class="team-info">
+        <img src="/img/david.jpeg" alt="David Gansen">
+        <h2>David Gansen</h2>
+        <p>Machine Learning Engineer</p>
+        <a href="https://dgansen.github.io/"><i class="fa fa-code fa-3x" aria-hidden="true"></i></a>
       </section>
 
 
       <section class="team-info">
-        <img src="http://via.placeholder.com/200" alt="Matthew Mulford">
-        <h2>Matthew Mulford</h2>
-        <p>Some bio info here</p>
+        <img src="/img/matt1.jpeg" alt="Matthew Molloy">
+        <h2>Matthew Molloy</h2>
+        <p>Back End Developer</p>
+        <a href="https://github.com/iatechristmas"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
       </section>
 
+      <section class="team-info">
+        <img src="/img/sigi.jpeg" alt="Sigi Jaeckel">
+        <h2>Sigi Jaeckel</h2>
+        <p>React Developer</p>
+        <a href="https://github.com/sigij5"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+      </section>
+
+      <section class="team-info">
+        <img src="/img/matt2.png" alt="Matthew Mulford">
+        <h2>Matthew Mulford</h2>
+        <p>UI Developer</p>
+        <a href="https://github.com/mhmulford0"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+      </section>
 
       <section class="team-info">
         <img src="http://via.placeholder.com/200" alt="Matthew Mulford">
         <h2>Matthew Mulford</h2>
         <p>Some bio info here</p>
+        <a href="https://github.com/mhmulford0"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
       </section>
-      <section class="team-info">
-        <img src="http://via.placeholder.com/200" alt="Matthew Mulford">
-        <h2>Matthew Mulford</h2>
-        <p>Some bio info here</p>
-      </section>
-      <section class="team-info">
-        <img src="http://via.placeholder.com/200" alt="Matthew Mulford">
-        <h2>Matthew Mulford</h2>
-        <p>Some bio info here</p>
-      </section>
-      <section class="team-info">
-        <img src="http://via.placeholder.com/200" alt="Matthew Mulford">
-        <h2>Matthew Mulford</h2>
-        <p>Some bio info here</p>
-      </section>
+
     </main>
   </div>
 
