added cards to team page

--- a/contact.html
+++ b/contact.html
@@ -64,10 +64,10 @@
       </section>
 
       <section class="team-info">
-        <img src="http://via.placeholder.com/200" alt="Matthew Mulford">
-        <h2>Matthew Mulford</h2>
-        <p>Some bio info here</p>
-        <a href="https://github.com/mhmulford0"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+        <img src="/img/mickey.jpeg" alt="Matthew Mulford">
+        <h2>Mickey Wells</h2>
+        <p>Machine Learning Engineer</p>
+        <a href="https://github.com/MickeyLeewells2020"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
       </section>
 
     </main>
