added features section to about page

--- a/about.html
+++ b/about.html
@@ -55,6 +55,25 @@
       </section>
     </main>
 
+    <section id="more-info">
+      <h2>Features</h2>
+      <section class="additional">
+        <h3>Our Algorithm</h3>
+        <p>Identifies similarities in the provided songs, and emphasizes those when providing suggestions</p>
+      </section>
+
+      <section class="additional">
+        <h3>Suggestions</h3>
+        <p>Are not pulled from a limited training set, but from spotify's entire catalog</p>
+      </section>
+
+      <section class="additional">
+        <h3>Behind The Scenes</h3>
+        <p>The algorithm is made of a combination of neural network architectures, including convolution, multilayer
+          perceptron, and autoencoder</p>
+      </section>
+    </section>
+
     <footer>
       <nav>
         <a href="index.html">Home</a>
