--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <h1>Think less, listen more</h1>
       <p>Spotify song suggestor helps you find the music you'll love</p>
       <div class="buttons">
-        <a href="#">Sign Up</a>
-        <a href="#">Login</a>
+        <a href="https://spotify-app-front-end-mnqdg40j9.vercel.app/signup">Sign Up</a>
+        <a href="https://spotify-app-front-end-mnqdg40j9.vercel.app/login">Login</a>
       </div>
     </main>
   </div>
